docs/validating-admission-policies/deny-pods-without-app-label-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deny-pods-without-app-label-binding
spec:
  policyName: deny-pods-without-app-label
  matchResources:
    namespaceSelector:
      matchLabels:
        vap: enabled
